--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <section class="webpage-title">
       <div class="red-block"></div>
       <div class="heading-container">
-        <img src="" alt="" class="spam-icon" />
+        <img
+          src="./images/spam-logo.png"
+          alt="grey spam icon"
+          class="spam-icon"
+        />
         <h1 class="heading-title">Spam detector dashboard</h1>
       </div>
     </section>
