--- a/about.html
+++ b/about.html
@@ -34,27 +34,37 @@
 
         <div class="right-side-container">
             <div class="card card-1">
-                <img src="" alt="" class="git-logo">
+                <img src="./images/Nim-git-img.png" alt="" class="git-logo">
+                <div class="card-text">
                 <p class="name">Nimra-R</p>
                 <p class="desc">(machine learning)</p>
+                </div>
             </div>
 
             <div class="card card-2">
-                <img src="" alt="" class="git-logo">
-                <p class="name">NabilaT2204</p>
+                
+                    <img src="./images/nab-git-img.png" alt="" class="git-logo">
+                
+                <div class="card-text">
+                    <p class="name">NabilaT2204</p>
                 <p class="desc">(back-end)</p>
+                </div>
             </div>
 
             <div class="card card-3">
-                <img src="" alt="" class="git-logo">
-                <p class="name">gitmahz</p>
+                    <img src="./images/mah-git-img.png" alt="" class="git-logo">
+                <div class="card-img">
+                    <p class="name">gitmahz</p>
                 <p class="desc">(back-end)</p>
+                </div>
             </div>
 
-            <div class="card car-4">
-                <img src="" alt="" class="git-logo">
-                <p class="name">su-n</p>
+            <div class="card card-4">
+                <img src="./images/sun-git-img.png" alt="" class="git-logo">
+                <div class="card-text">
+                    <p class="name">su-n</p>
                 <p class="desc">(front-end)</p>
+                </div>
             </div>
         </div>
     </section>
