--- a/index.html
+++ b/index.html
@@ -104,6 +104,39 @@
                 <p class="class-text">temp value</p>
               </td>
             </tr>
+            <tr class="table-body-row">
+              <td class="file-col">
+                <p class="file-text">temp value</p>
+              </td>
+              <td class="spam-prob-col">
+                <p class="prob-text">temp value</p>
+              </td>
+              <td class="class-col">
+                <p class="class-text">temp value</p>
+              </td>
+            </tr>
+            <tr class="table-body-row">
+              <td class="file-col">
+                <p class="file-text">temp value</p>
+              </td>
+              <td class="spam-prob-col">
+                <p class="prob-text">temp value</p>
+              </td>
+              <td class="class-col">
+                <p class="class-text">temp value</p>
+              </td>
+            </tr>
+            <tr class="table-body-row">
+              <td class="file-col">
+                <p class="file-text">temp value</p>
+              </td>
+              <td class="spam-prob-col">
+                <p class="prob-text">temp value</p>
+              </td>
+              <td class="class-col">
+                <p class="class-text">temp value</p>
+              </td>
+            </tr>
           </tbody>
         </table>
       </div>
