--- a/about.html
+++ b/about.html
@@ -1,72 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Page</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <section class="main">
-        <div class="left-side-container">
-            <div class="about-head-container">
-                <h1 class="about-tag">About</h1>
-            </div>
-
-            <article>
-                <p class="proj-description">
-                    This project involves a team of four members, developing a spam detection system capable of accurately  classifying emails as spam or legitimate!
-                </p>
-            </article>
-
-            <nav class="about-page-nav">
-                <ul>
-                    <li>
-                        <a href="./index.html" class="dashboard-link"></a>
-                    </li>
-                    <li>
-                        <a href="." class="docs-link"></a>
-                    </li>
-                </ul>
-            </nav>
+      <div class="left-side-container">
+        <div class="about-head-container">
+          <h1 class="about-tag">About</h1>
         </div>
 
+        <article class="project-about-article">
+          <p class="proj-description">
+            This project involves a team of four members, developing a spam
+            detection system capable of accurately classifying emails as spam or
+            legitimate!
+          </p>
+        </article>
 
-        <div class="right-side-container">
-            <div class="card card-1">
-                <img src="./images/Nim-git-img.png" alt="" class="git-logo">
-                <div class="card-text">
-                <p class="name">Nimra-R</p>
-                <p class="desc">(machine learning)</p>
-                </div>
-            </div>
+        <nav class="about-page-nav">
+          <ul>
+            <li>
+              <a href="./index.html" class="about-nav-link dashboard-link"
+                >Dashboard</a
+              >
+            </li>
+            <li>
+              <a href="." class="about-nav-link docs-link">Docs</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
 
-            <div class="card card-2">
-                
-                    <img src="./images/nab-git-img.png" alt="" class="git-logo">
-                
-                <div class="card-text">
-                    <p class="name">NabilaT2204</p>
-                <p class="desc">(back-end)</p>
-                </div>
-            </div>
+      <div class="right-side-container">
+        <!-- links to github -->
+        <a href="https://github.com/Nimra-R" class="card card-1">
+          <img src="./images/Nim-git-img.png" alt="" class="git-logo" />
+          <div class="card-text">
+            <p class="name">Nimra-R</p>
+            <p class="desc">(machine learning)</p>
+          </div>
+        </a>
 
-            <div class="card card-3">
-                    <img src="./images/mah-git-img.png" alt="" class="git-logo">
-                <div class="card-img">
-                    <p class="name">gitmahz</p>
-                <p class="desc">(back-end)</p>
-                </div>
-            </div>
+        <a href="https://github.com/NabilaT2204" class="card card-2">
+          <img src="./images/nab-git-img.png" alt="" class="git-logo" />
 
-            <div class="card card-4">
-                <img src="./images/sun-git-img.png" alt="" class="git-logo">
-                <div class="card-text">
-                    <p class="name">su-n</p>
-                <p class="desc">(front-end)</p>
-                </div>
-            </div>
-        </div>
+          <div class="card-text">
+            <p class="name">NabilaT2204</p>
+            <p class="desc">(back-end)</p>
+          </div>
+        </a>
+
+        <a href="https://github.com/gitmahz" class="card card-3">
+          <img src="./images/mah-git-img.png" alt="" class="git-logo" />
+          <div class="card-text">
+            <p class="name">gitmahz</p>
+            <p class="desc">(back-end)</p>
+          </div>
+        </a>
+
+        <a href="https://github.com/suthashan-001" class="card card-4">
+          <img src="./images/sun-git-img.png" alt="" class="git-logo" />
+          <div class="card-text">
+            <p class="name">su-n</p>
+            <p class="desc">(front-end)</p>
+          </div>
+        </a>
+      </div>
     </section>
-</body>
+  </body>
 </html>
