--- a/index.html
+++ b/index.html
@@ -173,6 +173,90 @@
         </div>
       </aside>
     </section>
+
+    <!-- dropbox section -->
+    <section class="dropbox">
+      <div class="drop-box-container">
+        <button class="submit-files-btn">submit files</button>
+        <div class="drop-box-area" id="drop-area">
+          <!-- dropbox icon -->
+          <svg
+            class="dropbox-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            width="3em"
+            height="3em"
+            viewBox="0 0 256 256"
+          >
+            <path
+              fill="currentColor"
+              d="M236.55 149.42L194.05 120l42.5-29.42a8 8 0 0 0 0-13.16l-52-36a8 8 0 0 0-9.1 0L128 74.27L80.55 41.42a8 8 0 0 0-9.1 0l-52 36a8 8 0 0 0 0 13.16L62 120l-42.5 29.42a8 8 0 0 0 0 13.16l52 36a8 8 0 0 0 9.1 0l47.4-32.85l47.45 32.85a8 8 0 0 0 9.1 0l52-36a8 8 0 0 0 0-13.16M128 146.27L90.05 120l38-26.27L166 120Zm52-88.54L218 84l-38 26.27L142.05 84Zm-104 0L114 84l-38 26.27L38.05 84Zm0 124.54L38.05 156l38-26.27L114 156Zm104 0L142.05 156L180 129.73L218 156Zm-21.53 24.64a8 8 0 0 1-2 11.13l-23.89 16.54a8 8 0 0 1-9.1 0L99.56 218a8 8 0 0 1 9.1-13.16L128 218.27l19.34-13.39a8 8 0 0 1 11.13 2.03"
+            />
+          </svg>
+          <p class="dropbox-text">drop box</p>
+        </div>
+
+        <section class="show-dropped-files">
+          <!-- where user files get show -->
+          <div class="dropped-file">
+            <svg
+              class="dropped-file-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="1.15em"
+              height="1.15em"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill="currentColor"
+                d="M2 1.75C2 .784 2.784 0 3.75 0h6.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16h-9.5A1.75 1.75 0 0 1 2 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h9.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073Zm4.48 3.758a.75.75 0 0 1 .755.745l.01 1.497h1.497a.75.75 0 0 1 0 1.5H9v1.507a.75.75 0 0 1-1.5 0V9.005l-1.502.01a.75.75 0 0 1-.01-1.5l1.507-.01l-.01-1.492a.75.75 0 0 1 .745-.755"
+              />
+            </svg>
+            <p class="file-name">file 1</p>
+
+            <svg
+              class="x-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="1.3em"
+              height="1.3em"
+              viewBox="0 0 256 256"
+            >
+              <path
+                fill="currentColor"
+                d="M205.66 194.34a8 8 0 0 1-11.32 11.32L128 139.31l-66.34 66.35a8 8 0 0 1-11.32-11.32L116.69 128L50.34 61.66a8 8 0 0 1 11.32-11.32L128 116.69l66.34-66.35a8 8 0 0 1 11.32 11.32L139.31 128Z"
+              />
+            </svg>
+          </div>
+
+          <div class="dropped-file">
+            <svg
+              class="dropped-file-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="1.15em"
+              height="1.15em"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill="currentColor"
+                d="M2 1.75C2 .784 2.784 0 3.75 0h6.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16h-9.5A1.75 1.75 0 0 1 2 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h9.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073Zm4.48 3.758a.75.75 0 0 1 .755.745l.01 1.497h1.497a.75.75 0 0 1 0 1.5H9v1.507a.75.75 0 0 1-1.5 0V9.005l-1.502.01a.75.75 0 0 1-.01-1.5l1.507-.01l-.01-1.492a.75.75 0 0 1 .745-.755"
+              />
+            </svg>
+            <p class="file-name">file 2</p>
+
+            <svg
+              class="x-icon"
+              xmlns="http://www.w3.org/2000/svg"
+              width="1.3em"
+              height="1.3em"
+              viewBox="0 0 256 256"
+            >
+              <path
+                fill="currentColor"
+                d="M205.66 194.34a8 8 0 0 1-11.32 11.32L128 139.31l-66.34 66.35a8 8 0 0 1-11.32-11.32L116.69 128L50.34 61.66a8 8 0 0 1 11.32-11.32L128 116.69l66.34-66.35a8 8 0 0 1 11.32 11.32L139.31 128Z"
+              />
+            </svg>
+          </div>
+        </section>
+      </div>
+    </section>
   </body>
   <script src="./app.js"></script>
 </html>
