--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
           class="spam-icon"
         />
         <h1 class="heading-title">Spam detector dashboard</h1>
+
+        <svg
+          class="mobile-icon"
+          xmlns="http://www.w3.org/2000/svg"
+          width="2em"
+          height="2em"
+          viewBox="0 0 24 24"
+        >
+          <path
+            fill="none"
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2.5"
+            d="M3 6h18M3 12h18M3 18h18"
+          />
+        </svg>
       </div>
     </section>
 
@@ -26,7 +43,7 @@
         <nav class="dashboard-nav">
           <ul>
             <li>
-              <a href="." class="dashboard current-page nav-link">Dashboard</a>
+              <a href="." class="dashboard current-page nav-link">Home</a>
             </li>
             <li>
               <a href="./about.html" class="About nav-link">About</a>
